Ajuste na tela da Agenda Configurar Atendimento Welton

--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.html
@@ -8,7 +8,7 @@
             <div class="form-group col-md-4">
               <h5 class="ml-lg-n3">Calendario de Atendimento</h5>
             </div>
-            <form id=“form-buscar-atendimento” [formGroup]="formAgendaAtendimento"  class="mobile" >
+            <form id=“form-buscar-atendimento” [formGroup]="formAgendaAtendimento">
               <div class="col-md-12 col-xs-12">
                   <div class="form-row">
                     <div class="form-group col-md-3">
